fix(inline-edit): add overflow: visible to innerScrollContainer

--- a/src/features/list-view/styles/ListView.scss
+++ b/src/features/list-view/styles/ListView.scss
@@ -51,4 +51,12 @@
     .ReactVirtualized__Grid {
         outline: none;
     }
+
+    .ReactVirtualized__Grid__innerScrollContainer {
+        /* Currently there is an issue where overflow is hidden for the Grid
+            which results in dropdowns getting cut off at the bottom of each row in the Grid
+            Setting overflow to visible solves that issue
+        */
+        overflow: visible !important;
+    }
 }
